Fixed colour contrast issue for links inside article elements
Update content-inline.sass to fix the color contrast issues

--- a/source-assets/styles2022/sass/custom/content-inline.sass
+++ b/source-assets/styles2022/sass/custom/content-inline.sass
@@ -126,7 +126,7 @@ p
 
 article
   a
-    color: $c_funky_darker_jungle
+    color: $c_dark_jungle
     text-decoration: none
 
     &:active,
@@ -135,11 +135,15 @@ article
     &:visited:active,
     &:visited:focus,
     &:visited:hover
-      color: $c_funky_darker_jungle
+      color: $c_dark_jungle
       text-decoration: underline
 
     &:visited
-      color: $c_funky_darker_jungle
+      color: $c_dark_jungle
+
+  p a 
+    color: $c_dark_jungle
+    text-decoration: underline
 
 .free-id
   height: 0.01px
